--- a/Scratch2/chapter1.ipynb
+++ b/Scratch2/chapter1.ipynb
@@ -242,12 +242,164 @@
     "# 점수란 '확률'이 되기 전의 값으로 점수가 높을수록 그 뉴런에 해당하는 클래스의 확률도 높아진다.\n",
     "# 점수를 소프트맥스 함수에 입력하면 확률을 얻을 수 있다.\n",
     "\n",
-    "# 여기에서 신경망 처리를 계층(Layer)으로 구현, 완전연결층에 의한 변환을 Affine 계층으로, 시그모이드 함수에 의한 변환을 Sigmoid 계층으로 구현"
+    "# 여기에서 신경망 처리를 계층(Layer)으로 구현, 완전연결층에 의한 변환을 Affine 계층으로, 시그모이드 함수에 의한 변환을 Sigmoid 계층으로 구현\n",
+    "# 순전파(forward propagation) : 입력층에서 출력층으로 향하는 전파\n",
+    "# 역전파(backward propagation) : 신경망 학습에서 데이터(기울기)를 순전파와는 반대 방향으로 전파\n",
+    "\n",
+    "# - 계층구현의 규칙\n",
+    "# 1) 모든 계층은 forward()와 backward() 메소드를 가진다.\n",
+    "# 2) 모든 계층은 인스턴스 변수인 params와 grads를 가진다."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.24660704 -1.85015289  1.58802297]\n",
+      " [-1.30945971 -1.72496732  1.67744155]\n",
+      " [-1.27720705 -1.80663322  1.60438522]\n",
+      " [-1.38056006 -1.54079691  1.51551953]\n",
+      " [-1.16441342 -1.97778105  1.49831985]\n",
+      " [-1.4362684  -1.58914213  1.52445095]\n",
+      " [-1.30148648 -1.75457943  1.64690466]\n",
+      " [-1.41492768 -1.57073276  1.53195979]\n",
+      " [-1.42349344 -1.63067996  1.5420135 ]\n",
+      " [-1.35911111 -1.6887795   1.60903242]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Sigmoid:\n",
+    "    def __init__(self):\n",
+    "        self.params = []\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "class Affine:\n",
+    "    def __init__(self, W, b):\n",
+    "        self.params = [W, b]   # W : 가중치, b : 편향\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        W, b = self.params\n",
+    "        out = np.dot(x, W) + b\n",
+    "        return out\n",
+    "\n",
+    "class TwoLayerNet:\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        I, H, O = input_size, hidden_size, output_size\n",
+    "\n",
+    "        # 가중치와 편향 초기화\n",
+    "        W1 = np.random.randn(I, H)     # I=2,H=4,O=3\n",
+    "        b1 = np.random.randn(H)\n",
+    "        W2 = np.random.randn(H, O)\n",
+    "        b2 = np.random.randn(O)\n",
+    "\n",
+    "        # 계층 생성\n",
+    "        #    layers[0] : Affine params(W1, b1)\n",
+    "        #    layers[1] : Sigmoid params()\n",
+    "        #    layers[2] : Affine params(W2, b2)\n",
+    "        self.layers = [\n",
+    "            Affine(W1, b1),\n",
+    "            Sigmoid(),\n",
+    "            Affine(W2, b2)\n",
+    "        ]\n",
+    "\n",
+    "        # 모든 가중치를 리스트에 모은다.\n",
+    "        #    self.params[0] : W1\n",
+    "        #         params[1] : b1\n",
+    "        #         params[2] : W2\n",
+    "        #         params[3] : b2\n",
+    "        self.params = []\n",
+    "        for layer in self.layers:\n",
+    "            self.params += layer.params\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer.forward(x)\n",
+    "        return x\n",
+    "\n",
+    "x = np.random.randn(10, 2)     # 2개씩 10세트\n",
+    "model = TwoLayerNet(2, 4, 3)   # 입력수, Hidden 수, 출력수\n",
+    "s = model.predict(x)\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.69072771e-01  1.61851743e+00]\n",
+      " [-1.21547832e+00  3.33522394e-01]\n",
+      " [ 5.96104948e-02  1.15093868e+00]\n",
+      " [-2.40265462e-01 -1.18116791e+00]\n",
+      " [ 7.63965319e-01  2.57456954e+00]\n",
+      " [ 2.44840420e-01 -5.53214917e-01]\n",
+      " [-5.49995535e-01  6.68396272e-01]\n",
+      " [ 2.08007378e-03 -8.13745968e-01]\n",
+      " [ 3.91435886e-01 -2.09657489e-01]\n",
+      " [ 9.98717844e-02  9.58075720e-02]] \n",
+      "\n",
+      "[[-0.28594281  1.38327491 -0.21368318  0.20078174]\n",
+      " [ 1.24718046 -1.53211791 -0.79122833 -1.36578588]] \n",
+      "\n",
+      "[ 2.10819276 -1.68177688  1.74115871 -3.27532134] \n",
+      "\n",
+      "[[-0.11059884 -0.24315787 -0.79270796]\n",
+      " [-0.57589233  0.26637372 -0.63217611]\n",
+      " [-0.36057885  0.52723246  0.35833487]\n",
+      " [ 1.31383155 -0.32696723 -1.05760007]] \n",
+      "\n",
+      "[-0.910685   -1.94253666  2.15535233]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x, \"\\n\")\n",
+    "# W1\n",
+    "print(model.params[0], \"\\n\")\n",
+    "# b1\n",
+    "print(model.params[1], \"\\n\")\n",
+    "# W2\n",
+    "print(model.params[2], \"\\n\")\n",
+    "# b2\n",
+    "print(model.params[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 손실함수(lost function) : 신경망이 예측한 결과를 비교하여 예측이 얼마나 나쁜가를 산출한 단일값(스칼라)\n",
+    "#  - 다중 클래스 분류(multi-class classification) 신경망 : 교차 엔트로피 오차(Cross Entropy Error)를 주로 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -267,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
