--- a/Scratch2/chapter1.ipynb
+++ b/Scratch2/chapter1.ipynb
@@ -390,10 +390,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]]\n",
+      "[[-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]\n",
+      " [-1.67781299e-01  1.54548973e-01 -1.40887527e+00 -1.66237915e+00\n",
+      "  -1.40923876e+00  8.24972431e-01  7.61588591e-04 -1.25879427e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "D, N = 8, 7\n",
+    "x = np.random.randn(1, D)\n",
+    "y = np.repeat(x, N, axis=0)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.29681494 0.54211239 0.5837915  0.02493234 0.20641769 0.36313872\n",
+      "  0.69956518 0.41948911]\n",
+      " [0.41607645 0.3812861  0.28792729 0.86055291 0.15014649 0.81127881\n",
+      "  0.89395542 0.50799153]\n",
+      " [0.09651133 0.37214417 0.67711783 0.26968187 0.40853881 0.42393404\n",
+      "  0.39147176 0.53794466]\n",
+      " [0.70192068 0.56446825 0.12124    0.13474678 0.63713429 0.51605192\n",
+      "  0.95388696 0.87696823]\n",
+      " [0.64632226 0.7458763  0.2287781  0.86661581 0.84601489 0.13326853\n",
+      "  0.80992549 0.17252587]\n",
+      " [0.25992217 0.98277086 0.58514354 0.45237201 0.45208479 0.82850806\n",
+      "  0.1068021  0.41175664]\n",
+      " [0.00328683 0.19775154 0.92875725 0.92887503 0.98614406 0.89407053\n",
+      "  0.27452546 0.72577412]]\n",
+      "[[2.42085467 3.78640962 3.41275552 3.53777676 3.68648103 3.97025061\n",
+      "  4.13013238 3.65245017]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dy = np.random.rand(N, D)\n",
+    "dx = np.sum(dy, axis=0, keepdims=True)\n",
+    "print(dy)\n",
+    "print(dx)"
+   ]
   },
   {
    "cell_type": "code",
@@ -419,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
